<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sk"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/vibrationToggle"
                android:layout_width="200dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/vibrationLabel"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#1564A3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/soundToggle"
                android:layout_width="200dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/soundLabel"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#1564A3"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:lineSpacingExtra="14sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#03A9F4"
            android:textSize="125sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="153dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/transparent"
                android:onClick="decrement"
                android:text="@string/decrement_minus_sign"
                android:textAlignment="center"
                android:textColor="#BFDFED"
                android:textSize="100sp"
                android:textStyle="bold"
                android:visibility="visible" />


            <Space
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/increment"
                android:layout_width="153dp"
                android:layout_height="match_parent"
                android:background="@drawable/transparent"
                android:onClick="increment"
                android:text="@string/increment_plus_sign"
                android:textAlignment="center"
                android:textColor="#BFDFED"
                android:textSize="100sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:background="@drawable/transparent"
            android:onClick="resetCounter"
            android:text="@string/reset"
            android:textColor="#BFDFED"
            android:textSize="50sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/footnotes"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:typeface="monospace" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>